--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loading-overlay": "^6.0.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
   },
